[workspace]
members = [
    "pgzstd_rs",
    "pg_bloomer"
]
resolver = "2"

[workspace.dependencies]
hex = "0.4.3"
pgrx = "=0.13.1"
pgrx-tests = "=0.13.1"
rayon = "1.8.1"
serde = { version = "1.0.219", features = ["derive"] }
zstd = "0.13"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.release-fat]
inherits = "release"
panic = "unwind"
lto = "fat"
codegen-units = 1