[package]
name = "pg_bloomer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_bloomer"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg16"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg_test = []

[dependencies]
serde = { workspace = true }
pgrx = { workspace = true }
pgrx-tests = { workspace = true }
fastbloom = { version = "0.9.0", features = ["rand", "serde"] }
once_cell = "1.18"
postcard = { version = "1.1.1", features = ["heapless", "heapless-cas", "alloc", "use-std"] }
rayon.workspace = true

[dev-dependencies]
hex = { workspace = true }
